--- a/src/main/resources/templates/cheese/index.html
+++ b/src/main/resources/templates/cheese/index.html
@@ -16,7 +16,7 @@
     <tr>
         <th>Name</th>
         <th>Description</th>
-        <th>Type</th>
+        <th>Category</th>
     </tr>
 
     <tr th:each="cheese : ${cheeses}">
@@ -26,6 +26,9 @@
     </tr>
 
 </table>
+
+<a href="/cheese/add">Add</a> |
+<a href="/cheese/remove">Remove</a>
 
 </body>
 </html>
